--- a/1.1.html
+++ b/1.1.html
@@ -8,8 +8,8 @@
 <p>1.1</p>
 <table border="1" width = "500"> 
 <tr>
-<td>dima</td>
-<td>sasha</td>
+<td>DIMA</td>
+<td>SASHA</td>
 <td rowspan="2">ikita</td>
 </tr>
 <tr>
