--- a/1.1.html
+++ b/1.1.html
@@ -13,8 +13,8 @@
 <td rowspan="2">ikita</td>
 </tr>
 <tr>
-<td>artem</td>
-<td>roma</td>
+<td>ARTEM</td>
+<td>ROMA</td>
 </tr>
 <tr>
 <td colspan="2">egor</td>
