--- a/1.1.html
+++ b/1.1.html
@@ -8,13 +8,13 @@
 <p>1.1</p>
 <table border="1" width = "500"> 
 <tr>
-<td>DIMA</td>
-<td>SASHA</td>
+<td>dima</td>
+<td>sasha</td>
 <td rowspan="2">ikita</td>
 </tr>
 <tr>
-<td>ARTEM</td>
-<td>ROMA</td>
+<td>artem</td>
+<td>roma</td>
 </tr>
 <tr>
 <td colspan="2">egor</td>
