--- a/1.1.html
+++ b/1.1.html
@@ -8,68 +8,68 @@
 <p>1.1</p>
 <table border="1" width = "500"> 
 <tr>
-<td>dima</td>
-<td>sasha</td>
-<td rowspan="2">ikita</td>
+<td>11111</td>
+<td>22222</td>
+<td rowspan="2">333333</td>
 </tr>
 <tr>
-<td>artem</td>
-<td>roma</td>
+<td>44444</td>
+<td>55555</td>
 </tr>
 <tr>
-<td colspan="2">egor</td>
-<td>taya</td>
+<td colspan="2">66666</td>
+<td>77777</td>
 </tr>
 </table>
 
 <p>1.2 </p>
 <table border="1" width = "500"> 
     <tr>
-    <td colspan="3">eva</td>
+    <td colspan="3">88888</td>
     </tr>
     <tr>
-    <td>artem</td>
-    <td>roma</td>
-    <td rowspan="3">ikita</td>
+    <td>99999</td>
+    <td>000000</td>
+    <td rowspan="3">11111</td>
     </tr>
     <tr>
-    <td>taya</td>
-    <td>taya</td>
+    <td>222222</td>
+    <td>22222</td>
     </tr>
     <tr>
-    <td>taya</td>
-    <td>taya</td>
+    <td>3333</td>
+    <td>33333</td>
     </tr>
     <tr>
-        <td colspan="3">eva</td>
+        <td colspan="3">4444</td>
         </tr>
 </table>
 
 <p>1.3 </p>
 <table border="1" width = "500"> 
     <tr>
-    <td>artem</td>
-    <td>roma</td>
-    <td rowspan="2">ikita</td>
-    <td rowspan="3">ikita</td>
-    <td rowspan="3">ikita</td>
+    <td>5555</td>
+    <td>456</td>
+    <td rowspan="2">123</td>
+    <td rowspan="3">789</td>
+    <td rowspan="3">456</td>
     </tr>
     <tr>
-    <td>taya</td>
-    <td>taya</td>
+    <td>123</td>
+    <td>456</td>
     </tr>
     <tr>
-    <td colspan="2">eva</td>
-    <td>taya</td>
+    <td colspan="2">7896</td>
+    <td>455</td>
     </tr>
     <tr>
-        <td colspan="3">eva</td>
-        <td>taya</td>
-        <td>taya</td>
+        <td colspan="3">654</td>
+        <td>545</td>
+        <td>t456</td>
         </tr>
         <tr>
-            <td colspan="4">eva</td>
-            <td>taya</td>
+            <td colspan="4">786</td>
+            <td>456a</td>
             </tr>
 </table>
 
