Добавила строчки в первой таблице

--- a/1.1.html
+++ b/1.1.html
@@ -28,6 +28,14 @@
             <td>artem</td>
             <td>roma</td>
             </tr>
+            <tr>
+                <td>artem</td>
+                <td>roma</td>
+                </tr>
+                <tr>
+                    <td>artem</td>
+                    <td>roma</td>
+                    </tr>            
 <tr>
 <td colspan="2">egor</td>
 <td>taya</td>
