Изменила текст в файле

--- a/1.2.html
+++ b/1.2.html
@@ -14,7 +14,7 @@
 <p><strong>Создать веб-страницу</strong>, содержащую 
             три следующих таблицы </p>
 <ol>
-    <li>Упорядоченный список</li>
+    <li>HelloWorld!</li>
     <li>Упорядоченный список</li>
     <li>Упорядоченный список</li>
     <li>Упорядоченный список</li>
